uniffi/generated/swift/html2markdown_uniffiFFI.h

uint16_t uniffi_html2markdown_uniffi_checksum_func_convert(void
    
);
uint16_t uniffi_html2markdown_uniffi_checksum_func_convert_with(void
    
);
uint16_t uniffi_html2markdown_uniffi_checksum_func_default_options(void
    
);
uint16_t uniffi_html2markdown_uniffi_checksum_func_default_stringify_options(void
    
);