uniffi/generated/python/html2markdown_uniffi.py

_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_convert.argtypes = (
)
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_convert.restype = ctypes.c_uint16
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_convert_with.argtypes = (
)
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_convert_with.restype = ctypes.c_uint16
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_default_options.argtypes = (
)
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_default_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_default_stringify_options.argtypes = (
)
_UniffiLib.uniffi_html2markdown_uniffi_checksum_func_default_stringify_options.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)



# Public interface members begin here.







class HeadingStyle(enum.Enum):
    """
    Heading style for Markdown output.
"""
    
    ATX = 0
    """
    `# Heading` (default).
"""
    
    SETEXT = 1
    """
    Underline style — only for h1/h2; falls back to ATX for h3–h6.
"""
    


class _UniffiFfiConverterTypeHeadingStyle(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        variant = buf.read_i32()
        if variant == 1:
            return HeadingStyle.ATX
        if variant == 2:
            return HeadingStyle.SETEXT
        raise InternalError("Raw enum value doesn't match any cases")

    @staticmethod
    def check_lower(value):
        if value == HeadingStyle.ATX:
            return
        if value == HeadingStyle.SETEXT:
            return
        raise ValueError(value)

    @staticmethod
    def write(value, buf):
        if value == HeadingStyle.ATX:
            buf.write_i32(1)
        if value == HeadingStyle.SETEXT:
            buf.write_i32(2)



class _UniffiFfiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiFfiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

class _UniffiFfiConverterBoolean:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)






class ListItemIndent(enum.Enum):
    """
    List item indentation style.
"""
    
    ONE = 0
    """
    Bullet + 1 space (default).
"""
    
    TAB = 1
    """
    Round up to 4 columns.
"""
    
    MIXED = 2
    """
    One for tight lists, tab for spread.
"""
    


class _UniffiFfiConverterTypeListItemIndent(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        variant = buf.read_i32()
        if variant == 1:
            return ListItemIndent.ONE
        if variant == 2:
            return ListItemIndent.TAB
        if variant == 3:
            return ListItemIndent.MIXED
        raise InternalError("Raw enum value doesn't match any cases")

    @staticmethod
    def check_lower(value):
        if value == ListItemIndent.ONE:
            return
        if value == ListItemIndent.TAB:
            return
        if value == ListItemIndent.MIXED:
            return
        raise ValueError(value)

    @staticmethod
    def write(value, buf):
        if value == ListItemIndent.ONE:
            buf.write_i32(1)
        if value == ListItemIndent.TAB:
            buf.write_i32(2)
        if value == ListItemIndent.MIXED:
            buf.write_i32(3)



@dataclass
class StringifyOptions:
    """
    Serializer formatting options.

    Character fields (`bullet`, `emphasis`, etc.) are represented as single-character
    strings because UniFFI does not support Rust's `char` type.
"""
    def __init__(self, *, heading_style:HeadingStyle, bullet:str, bullet_ordered:str, emphasis:str, strong:str, fence:str, rule:str, rule_repetition:int, rule_spaces:bool, close_atx:bool, list_item_indent:ListItemIndent, increment_list_marker:bool, quote:str, fences:bool, resource_link:bool):
        self.heading_style = heading_style
        self.bullet = bullet
        self.bullet_ordered = bullet_ordered
        self.emphasis = emphasis
        self.strong = strong
        self.fence = fence
        self.rule = rule
        self.rule_repetition = rule_repetition
        self.rule_spaces = rule_spaces
        self.close_atx = close_atx
        self.list_item_indent = list_item_indent
        self.increment_list_marker = increment_list_marker
        self.quote = quote
        self.fences = fences
        self.resource_link = resource_link
        
        

    
    def __str__(self):
        return "StringifyOptions(heading_style={}, bullet={}, bullet_ordered={}, emphasis={}, strong={}, fence={}, rule={}, rule_repetition={}, rule_spaces={}, close_atx={}, list_item_indent={}, increment_list_marker={}, quote={}, fences={}, resource_link={})".format(self.heading_style, self.bullet, self.bullet_ordered, self.emphasis, self.strong, self.fence, self.rule, self.rule_repetition, self.rule_spaces, self.close_atx, self.list_item_indent, self.increment_list_marker, self.quote, self.fences, self.resource_link)
    def __eq__(self, other):
        if self.heading_style != other.heading_style:
            return False
        if self.bullet != other.bullet:
            return False
        if self.bullet_ordered != other.bullet_ordered:
            return False
        if self.emphasis != other.emphasis:
            return False
        if self.strong != other.strong:
            return False
        if self.fence != other.fence:
            return False
        if self.rule != other.rule:
            return False
        if self.rule_repetition != other.rule_repetition:
            return False
        if self.rule_spaces != other.rule_spaces:
            return False
        if self.close_atx != other.close_atx:
            return False
        if self.list_item_indent != other.list_item_indent:
            return False
        if self.increment_list_marker != other.increment_list_marker:
            return False
        if self.quote != other.quote:
            return False
        if self.fences != other.fences:
            return False
        if self.resource_link != other.resource_link:
            return False
        return True

class _UniffiFfiConverterTypeStringifyOptions(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return StringifyOptions(
            heading_style=_UniffiFfiConverterTypeHeadingStyle.read(buf),
            bullet=_UniffiFfiConverterString.read(buf),
            bullet_ordered=_UniffiFfiConverterString.read(buf),
            emphasis=_UniffiFfiConverterString.read(buf),
            strong=_UniffiFfiConverterString.read(buf),
            fence=_UniffiFfiConverterString.read(buf),
            rule=_UniffiFfiConverterString.read(buf),
            rule_repetition=_UniffiFfiConverterUInt8.read(buf),
            rule_spaces=_UniffiFfiConverterBoolean.read(buf),
            close_atx=_UniffiFfiConverterBoolean.read(buf),
            list_item_indent=_UniffiFfiConverterTypeListItemIndent.read(buf),
            increment_list_marker=_UniffiFfiConverterBoolean.read(buf),
            quote=_UniffiFfiConverterString.read(buf),
            fences=_UniffiFfiConverterBoolean.read(buf),
            resource_link=_UniffiFfiConverterBoolean.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterTypeHeadingStyle.check_lower(value.heading_style)
        _UniffiFfiConverterString.check_lower(value.bullet)
        _UniffiFfiConverterString.check_lower(value.bullet_ordered)
        _UniffiFfiConverterString.check_lower(value.emphasis)
        _UniffiFfiConverterString.check_lower(value.strong)
        _UniffiFfiConverterString.check_lower(value.fence)
        _UniffiFfiConverterString.check_lower(value.rule)
        _UniffiFfiConverterUInt8.check_lower(value.rule_repetition)
        _UniffiFfiConverterBoolean.check_lower(value.rule_spaces)
        _UniffiFfiConverterBoolean.check_lower(value.close_atx)
        _UniffiFfiConverterTypeListItemIndent.check_lower(value.list_item_indent)
        _UniffiFfiConverterBoolean.check_lower(value.increment_list_marker)
        _UniffiFfiConverterString.check_lower(value.quote)
        _UniffiFfiConverterBoolean.check_lower(value.fences)
        _UniffiFfiConverterBoolean.check_lower(value.resource_link)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterTypeHeadingStyle.write(value.heading_style, buf)
        _UniffiFfiConverterString.write(value.bullet, buf)
        _UniffiFfiConverterString.write(value.bullet_ordered, buf)
        _UniffiFfiConverterString.write(value.emphasis, buf)
        _UniffiFfiConverterString.write(value.strong, buf)
        _UniffiFfiConverterString.write(value.fence, buf)
        _UniffiFfiConverterString.write(value.rule, buf)
        _UniffiFfiConverterUInt8.write(value.rule_repetition, buf)
        _UniffiFfiConverterBoolean.write(value.rule_spaces, buf)
        _UniffiFfiConverterBoolean.write(value.close_atx, buf)
        _UniffiFfiConverterTypeListItemIndent.write(value.list_item_indent, buf)
        _UniffiFfiConverterBoolean.write(value.increment_list_marker, buf)
        _UniffiFfiConverterString.write(value.quote, buf)
        _UniffiFfiConverterBoolean.write(value.fences, buf)
        _UniffiFfiConverterBoolean.write(value.resource_link, buf)

class _UniffiFfiConverterOptionalString(_UniffiConverterRustBuffer):
    @classmethod
    def check_lower(cls, value):
        if value is not None:
            _UniffiFfiConverterString.check_lower(value)

    @classmethod
    def write(cls, value, buf):
        if value is None:
            buf.write_u8(0)
            return

        buf.write_u8(1)
        _UniffiFfiConverterString.write(value, buf)

    @classmethod
    def read(cls, buf):
        flag = buf.read_u8()
        if flag == 0:
            return None
        elif flag == 1:
            return _UniffiFfiConverterString.read(buf)
        else:
            raise InternalError("Unexpected flag byte for optional type")

class _UniffiFfiConverterSequenceString(_UniffiConverterRustBuffer):
    @classmethod
    def check_lower(cls, value):
        for item in value:
            _UniffiFfiConverterString.check_lower(item)

    @classmethod
    def write(cls, value, buf):
        items = len(value)
        buf.write_i32(items)
        for item in value:
            _UniffiFfiConverterString.write(item, buf)

    @classmethod
    def read(cls, buf):
        count = buf.read_i32()
        if count < 0:
            raise InternalError("Unexpected negative sequence length")

        return [
            _UniffiFfiConverterString.read(buf) for i in range(count)
        ]
